# numerical-art

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCairomm.cmake
includes/algo/: b_spline.hpp  constants.hpp  generative.hpp  hermite_spline.hpp  noise.hpp
src/algo/: b_spline.cpp  generative.cpp  hermite_spline.cpp  noise.cpp
src/examples/: b_spline.cpp  circle.cpp  perlin_noise.cpp  random_flows.cpp  sand.cpp
